# rocket-lander

./: .gitignore  README.md  pyproject.toml
coco_rocket_lander/algs/: __init__.py  controller_base.py  deepc.py  mpc.py  pid.py
coco_rocket_lander/env/: env_cfg.py  rocketlander.py  system_model.py
example/: deepc_pid_diamond.py  deepc_pid_hover.py  deepc_random.py  mpc.py  mpc_example.py  pid_example.py
