[tool.poetry]
name = "coco-rocket-lander"
version = "0.0.4"
description = "A rocket lander gym environment"
license = "MIT"
authors = [
    "Dylan Vogel <dyvogel@student.ethz.ch>",
    "Gerasimos Maltezos <gmaltezos@student.ethz.ch>"
]
readme = "README.md"
repository = "https://gitlab.ethz.ch/kmoffat/coco_project/"
packages = [{include = "coco_rocket_lander"}]


[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["box2d"], version = "^1.2.0"}
cvxpy = "^1.7.2"
moviepy = "^2.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


